# AI-Cloud-Monitoring

./: README.md
backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: logic_monitor.py  orchestrator.py  runner.py  sanity_enforcer.py
backend/app/models/: schemas.py
backend/app/routers/: logs.py
backend/app/services/: log_reader.py  session_manager.py
backend/app/tools/: kill_switch.py
backend/data/: audit_logs.json
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: BottomWidgets.tsx  Header.tsx  PulseMonitor.tsx  SidebarWidgets.tsx
frontend/src/hooks/: useLogStream.ts  useTypewriter.ts
frontend/src/lib/: types.ts
