[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "openai>=2.36.0",
    "openai-agents>=0.17.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.3",
    "uvicorn>=0.46.0",
]
